--- a/index.html
+++ b/index.html
@@ -98,7 +98,14 @@
     <audio id="hbd-audio" loop>
         <source src="lagu.mp3" type="audio/mpeg">
     </audio>
+<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+<script type="text/javascript">
+   (function(){
+      // GANTI DENGAN PUBLIC KEY KAMU
+      emailjs.init("_BAD44SNHsKK6Rgj0");
+   })();
+</script>
 
-    <script src="script.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
